--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-07-09 08:40+0200\n"
+"POT-Creation-Date: 2024-09-10 07:32+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2192,6 +2192,13 @@ msgstr ""
 
 msgid "New Note"
 msgstr "Neue Notiz"
+
+msgid "Error: No custom texts found"
+msgstr "Fehler: Keine benutzerdefinierten Texte gefunden"
+
+#, python-format
+msgid "Error: No custom text found for '${key}'"
+msgstr "Fehler: Kein benutzerdefinierter Text gefunden für '${key}'"
 
 #~ msgid "Subscribe to Selection as RSS"
 #~ msgstr "Hashtags abonnieren"
