--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-07-09 08:40+0200\n"
+"POT-Creation-Date: 2024-09-10 07:32+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2197,6 +2197,13 @@ msgstr ""
 
 msgid "New Note"
 msgstr "Nouveau commentaire"
+
+msgid "Error: No custom texts found"
+msgstr "Erreur: Aucun texte personnalisé n'a été trouvé"
+
+#, python-format
+msgid "Error: No custom text found for '${key}'"
+msgstr "Erreur : Aucun texte personnalisé n'a été trouvé pour '${key}'"
 
 #~ msgid "Subscribe to Selection as RSS"
 #~ msgstr "S'abonner aux hashtags"
