--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-05 15:08+0200\n"
+"POT-Creation-Date: 2024-09-11 10:07+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2621,17 +2621,29 @@ msgstr "La demande de modification a été effectuée"
 msgid "The submission was rejected"
 msgstr "La proposition a été rejetée"
 
-msgid "Your directory submission has been rejected"
-msgstr "Votre proposition de répertoire a été rejetée"
+msgid "Your directory entry submission has been rejected"
+msgstr "La soumission de votre entrée dans l'annuaire a été rejetée"
+
+msgid "The entry submission has been rejected"
+msgstr "La soumission d'entrée a été rejetée"
+
+msgid "Your directory change submission has been rejected"
+msgstr "Votre demande de modification de l'annuaire a été rejetée"
+
+msgid "The change submission has been rejected"
+msgstr "La soumission de changement a été rejetée"
 
 msgid "The rejection was already withdrawn"
 msgstr "Le rejet a déjà été retiré"
 
-msgid "Your directory submission rejection has been withdrawn"
-msgstr "Le rejet de votre soumission d'annuaire a été retiré"
+msgid "The directory entry submission rejection has been withdrawn"
+msgstr "Le rejet de la soumission d'entrée dans l'annuaire a été retiré"
 
-msgid "The rejection was withdrawn"
-msgstr "Le rejet a été retiré"
+msgid "The rejection of the entry has been withdrawn"
+msgstr "Le rejet de l'entrée a été retiré"
+
+msgid "The rejection of the change has been withdrawn"
+msgstr "Le rejet de la modification a été retiré "
 
 msgid "Through URL only (not listed)"
 msgstr "Via URL uniquement (non répertorié)"
@@ -2948,6 +2960,20 @@ msgstr "Voir l'entrée de répertoire"
 
 msgid "Withdraw rejection"
 msgstr "Retirer le refus"
+
+msgid ""
+"This directory entry has been rejected. Do you want to withdraw the "
+"rejection?"
+msgstr "Cette entrée de répertoire a été rejetée. Voulez-vous retirer le rejet?"
+
+msgid "Reject change request"
+msgstr "Rejeter la demande de modification"
+
+msgid "Do you really want to reject this change?"
+msgstr "Voulez-vous vraiment rejeter cette modification?"
+
+msgid "Reject change"
+msgstr "Rejeter le changement"
 
 msgid "Reject entry"
 msgstr "Rejeter l'entrée"
@@ -4091,8 +4117,14 @@ msgstr "Demande de modification effectuée."
 msgid "Directory entry rejected."
 msgstr "L'entrée de répertoire a été rejetée."
 
-msgid "Rejection withdrawn."
-msgstr "Retrait du rejet."
+msgid "Directory change rejected."
+msgstr "Changement de répertoire rejeté."
+
+msgid "Entry rejection withdrawn."
+msgstr "Retrait du rejet de l'entrée."
+
+msgid "Change rejection withdrawn."
+msgstr "Rejet du changement retiré."
 
 msgid "Event edited."
 msgstr "Événement édité"
@@ -6095,6 +6127,18 @@ msgstr "Un compte a été créé pour vous"
 
 msgid "The user was created successfully"
 msgstr "L'utilisateur a bien été créé"
+
+#~ msgid "Your directory submission has been rejected"
+#~ msgstr "Votre proposition de répertoire a été rejetée"
+
+#~ msgid "Your directory submission rejection has been withdrawn"
+#~ msgstr "Le rejet de votre soumission d'annuaire a été retiré"
+
+#~ msgid "The rejection was withdrawn"
+#~ msgstr "Le rejet a été retiré"
+
+#~ msgid "Rejection withdrawn."
+#~ msgstr "Retrait du rejet."
 
 #~ msgid "Reject"
 #~ msgstr "Rejeter"
