--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2024-08-29 15:08+0200\n"
+"POT-Creation-Date: 2024-09-11 10:07+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2627,8 +2627,29 @@ msgstr "La richiesta di modifica è stata applicata"
 msgid "The submission was rejected"
 msgstr "L'iscrizione è stata rifiutata"
 
-msgid "Your directory submission has been rejected"
-msgstr "L'invio della cartella è stato rifiutato"
+msgid "Your directory entry submission has been rejected"
+msgstr "L'inserimento nella directory è stato rifiutato"
+
+msgid "The entry submission has been rejected"
+msgstr "L'iscrizione è stata rifiutata"
+
+msgid "Your directory change submission has been rejected"
+msgstr "L'invio di una modifica alla directory è stato rifiutato"
+
+msgid "The change submission has been rejected"
+msgstr "'invio della modifica è stato rifiutato"
+
+msgid "The rejection was already withdrawn"
+msgstr "Il rifiuto è già stato ritirato"
+
+msgid "The directory entry submission rejection has been withdrawn"
+msgstr "Il rifiuto dell'inserimento nell'elenco è stato ritirato"
+
+msgid "The rejection of the entry has been withdrawn"
+msgstr "Il rifiuto della voce è stato ritirato"
+
+msgid "The rejection of the change has been withdrawn"
+msgstr "Il rifiuto della modifica è stato ritirato"
 
 msgid "Through URL only (not listed)"
 msgstr "Solo tramite URL (non elencato)"
@@ -2943,14 +2964,28 @@ msgstr "Adotta"
 msgid "View directory entry"
 msgstr "Visualizza elemento della cartella"
 
-msgid "Reject"
-msgstr "Rifiuta"
+msgid "Withdraw rejection"
+msgstr "Ritiro del rifiuto"
 
-msgid "Do you really want to reject this entry?"
-msgstr "Vuoi davvero rifiutare questo elemento?"
+msgid ""
+"This directory entry has been rejected. Do you want to withdraw the "
+"rejection?"
+msgstr "Questa voce dell'elenco è stata rifiutata. Volete ritirare il rifiuto?"
+
+msgid "Reject change request"
+msgstr "Rifiuta la richiesta di modifica"
+
+msgid "Do you really want to reject this change?"
+msgstr "Volete davvero rifiutare questa modifica?"
+
+msgid "Reject change"
+msgstr "Rifiutare la modifica"
 
 msgid "Reject entry"
 msgstr "Rifiuta elemento"
+
+msgid "Do you really want to reject this entry?"
+msgstr "Vuoi davvero rifiutare questo elemento?"
 
 msgid "Chats"
 msgstr "Chat"
@@ -3846,6 +3881,10 @@ msgstr "La richiesta di modifica è stata applicata:"
 msgid "Your directory submission has unfortunately been rejected:"
 msgstr "L'invio della cartella è stato rifiutato:"
 
+msgid "The rejection of your directory application has been withdrawn:"
+msgstr ""
+"Il rifiuto della vostra domanda di iscrizione all'elenco è stato ritirato:"
+
 msgid "Your event has been accepted:"
 msgstr "L'evento è stato accettato:"
 
@@ -4067,6 +4106,15 @@ msgstr "Richiesta di modifica applicata."
 
 msgid "Directory entry rejected."
 msgstr "Elemento della cartella rifiutato."
+
+msgid "Directory change rejected."
+msgstr "Modifica della directory rifiutata"
+
+msgid "Entry rejection withdrawn."
+msgstr "Rifiuto di iscrizione ritirato"
+
+msgid "Change rejection withdrawn."
+msgstr "Rifiuto di modifica ritirato"
 
 msgid "Event edited."
 msgstr "Evento montato."
@@ -6068,6 +6116,21 @@ msgstr "È stato creato un account per te"
 
 msgid "The user was created successfully"
 msgstr "Utente creato correttamente"
+
+#~ msgid "Your directory submission has been rejected"
+#~ msgstr "L'invio della cartella è stato rifiutato"
+
+#~ msgid "Your directory submission rejection has been withdrawn"
+#~ msgstr "Il rifiuto dell'invio della directory è stato ritirato"
+
+#~ msgid "The rejection was withdrawn"
+#~ msgstr "Il rifiuto è stato ritirato"
+
+#~ msgid "Rejection withdrawn."
+#~ msgstr "Rifiuto ritirato."
+
+#~ msgid "Reject"
+#~ msgstr "Rifiuta"
 
 #~ msgid "Update Subscription"
 #~ msgstr "Aggiornare l'abbonamento"
