--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-16 11:07+0200\n"
+"POT-Creation-Date: 2024-09-18 12:11+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2715,15 +2715,20 @@ msgstr ""
 msgid "Use text instead of lead in the newsletter"
 msgstr "Utiliser le texte au lieu de l'introduction dans le newsletter"
 
+msgid "Select additional person"
+msgstr "Sélectionnez une personne supplémentaire"
+
+msgid "No results match"
+msgstr "Aucun résultat ne correspond"
+
+msgid "List this function in the page of this person"
+msgstr "Afficher cette fonction sur la page de cette personne"
+
 msgid "Use Western ordered names"
 msgstr "Utiliser des noms occidentaux ordonnés"
 
 msgid "For instance Franz Müller instead of Müller Franz"
 msgstr "Par exemple Franz Müller au lieu de Müller Franz"
-
-#, python-format
-msgid "List this function in the page of ${name}"
-msgstr "Afficher cette fonction sur la page de ${name}"
 
 msgid "A resource with this name already exists"
 msgstr "Une ressource portant ce nom existe déjà"
@@ -2944,8 +2949,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -2986,6 +2991,8 @@ msgid ""
 "This directory change has been rejected. Do you want to withdraw the "
 "rejection?"
 msgstr ""
+"Cette modification de répertoire a été rejetée. Voulez-vous retirer le "
+"rejet ?"
 
 msgid "Reject change request"
 msgstr "Rejeter la demande de modification"
@@ -3297,8 +3304,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
