--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2024-09-18 12:11+0200\n"
+"POT-Creation-Date: 2024-09-23 09:28+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2948,8 +2948,8 @@ msgstr "Die Absage von ${title} kann nicht rückgängig gemacht werden."
 msgid "Reject reservation"
 msgstr "Reservation absagen"
 
-#.
 #. Used in sentence: "${event} published."
+#.
 msgid "Event"
 msgstr "Veranstaltung"
 
@@ -5892,6 +5892,15 @@ msgstr "Neue Umfrage"
 
 msgid "Please choose a submission window"
 msgstr "Bitte wählen Sie einen Befragungszeitraum"
+
+msgid ""
+"This field cannot be edited because there are submissions associated with "
+"this survey. If you want to edit the definition please delete all "
+"submissions."
+msgstr ""
+"Dieses Feld kann nicht bearbeitet werden, da diese Umfrage bereits Einträge "
+"hat. Wenn Sie die Definition bearbeiten möchten, löschen Sie bitte alle "
+"Einträge."
 
 msgid "Exports the submissions of the survey."
 msgstr "Exportiert die Umfrageeinträge."
